# f_search_demo

./: .env.example  .gitignore  Makefile  README.md  SDK_README.md  SDK_SUMMARY.md  pyproject.toml  requirements.txt
docs/: architecture.md
docs/plans/: 2026-02-03-furniture-hybrid-search-design.md  2026-02-03-furniture-hybrid-search-implementation.md  2026-03-09-search-performance-optimization.md
frontend/: index.html
furniture_search/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  __init__.py  client.py  config.py  pyproject.toml  server.py  start.sh
furniture_search/core/: fusion.py  hybrid_search.py
furniture_search/core/encoders/: __init__.py  text_encoder.py
furniture_search/core/generators/: __init__.py  description.py
furniture_search/core/storage/: __init__.py  zilliz_client.py
furniture_search/examples/: http_client_examples.md  python_usage.py  test_sdk.py
scripts/: batch_import.py  init_collection.py
src/: config.py
src/api/: deps.py  main.py
src/api/routes/: health.py  search.py
src/encoders/: image_encoder.py  text_encoder.py
src/generators/: description.py
src/models/: schemas.py
src/search/: fusion.py  hybrid_search.py
src/storage/: milvus_client.py  zilliz_client.py
tests/: conftest.py  test_config.py  test_deps.py  test_description_generator.py  test_fusion.py  test_health_api.py  test_hybrid_search.py  test_image_encoder.py  test_milvus_client.py  test_schemas.py  test_search_api.py  test_text_encoder.py  test_zilliz_client.py
